@@ -14,6 +14,8 @@
 	- `csrf` flag in `ROUTE()` method
 	- `RESTBuilder.csrf(token)`
 - `CONF.default_errorbuilder_errors` for handling of all HTTP errors via ErrorBuilder
+- decreased `default_interval_websocket_ping` to `1` minute (from `3`)
+- fixed message with `closing bytes` in WebSocket and `WEBSOCKETCLIENT()`
 
 ========================
 0.0.36
